# django_homework

./: .env.example  README.md  categories_fixture.json  products_fixture.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_content_alter_article_image.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html  header.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_category_and_more.py
catalog/templates/catalog/: base.html  contacts.html  header.html  home.html  main.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_avatar.py
users/templates/users/: login.html  register.html
