[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.2.1"
ipython = "^9.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.lint.dependencies]
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line_length = 119
exclude = '''
(
  /(
    \.git          # в корне проекта
  )/
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
